# lalrpop

./: .gitignore  Cargo.toml
lalrpop/: Cargo.toml  build.rs
lalrpop-test/: Cargo.toml
lalrpop-test/src/: lib.rs  minirust.lalrpop
lalrpop-util/: Cargo.toml
lalrpop-util/src/: lib.rs
lalrpop-util/src/parse_tree/: bottom_up_builder.rs  mod.rs  search.rs
lalrpop/src/: lib.rs
lalrpop/src/grammar/: consts.rs  parse_tree.rs  repr.rs
lalrpop/src/lollipop/: lollipop.lalrpop_  lollipop.lollipop  lollipop.rs  lower.rs  mod.rs
lalrpop/src/lollipop/analysis/: diagnostics.rs  mod.rs
lalrpop/src/lollipop/ast/: mod.rs
lalrpop/src/normalize/: mod.rs  parse_tree_mode.rs
lalrpop/src/normalize/lower/: mod.rs
lalrpop/src/normalize/macro_expand/: mod.rs
lalrpop/src/normalize/prevalidate/: mod.rs
lalrpop/src/parser/: lrgrammar.lalrpop
lollipop/: Cargo.toml  ex.lollipop
lollipop/code/: .gitignore  justfile  package-lock.json  package.json
lollipop/code/native/: Cargo.toml
lollipop/code/native/src/: lib.rs
lollipop/code/src/: common.ts  main.ts
lollipop/ll-test/: Cargo.toml
lollipop/ll-test/src/: ex.rs  main.rs
lollipop/src/: codegen.rs  ide.rs  lib.rs  lollipop.lalrpop_  lollipop.lollipop  lollipop.rs  lower.rs  visitor.rs
lollipop/src/analysis/: diagnostics.rs  lexer.rs  mod.rs
lollipop/src/ast/: ast_ext.rs  generated.rs  mod.rs
lollipop/src/ide/: diagnostic.rs  highlight.rs  mod.rs
