[package]
name = "lollipop"
version = "0.0.0"
repository = "https://github.com/lalrpop/lalrpop"
keywords = ["parser", "generator", "LR", "yacc", "grammar"]
categories = ["parsing"]
license = "Apache-2.0/MIT"

[workspace]


[dependencies]
serde = "1"
serde_derive = "1"
parse_tree = "0.0.5"
lalrpop = { path = "../lalrpop" }
lalrpop-util = { path = "../lalrpop-util" }
regex = "0.2"
string_cache = "0.7.1"
file = "1.1.1"
failure = "0.1.1"
