[package]
name = "lollipop_backend"
version = "0.1.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
license = "MIT"
build = "build.rs"

[workspace]

[lib]
name = "lollipop_backend"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.22"

[dependencies]
neon = "0.1.22"
serde = "1"
neon-serde = "0.0.3"
lazy_static = "0.2"
lollipop = { path = "../.." }
